fix(tab-item): remove unnecessary z-index (parent tab-list handles stacking)

--- a/packages/components/src/components/tab-item/tab-item.scss
+++ b/packages/components/src/components/tab-item/tab-item.scss
@@ -19,7 +19,6 @@
 	font: inherit;
 	color: inherit;
 	flex-shrink: 0;
-	z-index: 2;
 	max-inline-size: variables.$db-sizing-2xl;
 
 	@extend %transparent-border;
